docs: refresh README and local web startup flow